[package]
name = "cliplot"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters-iced = "^0.4"
plotters = "^0.3"
iced = { version = "0.5", features = ["canvas", "tokio"] }
chrono = "0.4.23"
regex = "1.7.0"
tokio = { version = "1.22.0", features = ["io-std", "io-util"] }

log = "0.4.17"
simplelog = "0.12.0"
clap = { version = "4.0.26", features = ["derive"] }
clap-verbosity-flag = "2.0.0"