[package]
name = "cliplot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Andrew Ealovega <Andrew@Ealovega.dev>"]
description = "Live-plots data from the command line"
documentation = "https://github.com/andyblarblar/cliplot"
repository = "https://github.com/andyblarblar/cliplot"
homepage = "https://github.com/andyblarblar/cliplot"
readme = "README.md"
categories = ["command-line-utilities", "visualization"]

exclude = ["docs"]

[dependencies]
plotters-iced = "^0.4"
plotters = "^0.3"
iced = { version = "0.5", features = ["canvas", "tokio", "image_rs"] }
chrono = "0.4.23"
regex = "1.7.0"
tokio = { version = "1.22.0", features = ["io-std", "io-util"] }
csv = "1.1.6"

log = "0.4.17"
simplelog = "0.12.0"
clap = { version = "4.0.26", features = ["derive"] }
clap-verbosity-flag = "2.0.0"

[profile.release]
lto = 'thin'